--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="style.css" type="text/css" media="screen, print">
-		<script type="text/javascript" src="gravity_sim.js"></script>
+		<script type="text/javascript" src="gravity_sim.min.js"></script>
 		<script type="text/javascript" src="dat.gui.min.js"></script>
 	</head>
 	<body> 
